--- a/CorsoMVCSolution/CorsoMVC/Views/Utenti/PrimoView.cshtml
+++ b/CorsoMVCSolution/CorsoMVC/Views/Utenti/PrimoView.cshtml
@@ -1,14 +1,1 @@
-﻿@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>Ciao, Mauurizio (dal view)!</title>
-</head>
-    <body>
-        <h1>Ciao, Mauurizio (dal view)!</h1>
-    </body>
-</html>
+﻿        <h1>Ciao, Mauurizio (dal view)!</h1>
